2010-06-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movsi_1) <TYPE_LEA>: Use %a modifier
	to output operand 1.
	(ashift_zext lea splitter): Use DImode for multiplication.

2010-06-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*addqi_4): Check for incdec_operand in QImode.

2010-06-04  Alan Modra  <amodra@gmail.com>

	PR target/44075
	* gcc/config/rs6000/rs6000.c (struct machine_function): Reorder
	fields for better packing.  Add lr_save_state.
	(rs6000_ra_ever_killed): Return lr_save_state if set.
	(rs6000_emit_eh_reg_restore): Set lr_save_state.

2010-05-24  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2010-05-20  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43733
	* configure.ac (gcc_cv_as_ix86_sahf): Switch to 64bit mode.
	* configure: Regenerate.
	* config.in: Regenerate.
	* config/i386/i386.md (x86_sahf_1): Conditionally output 0x9e
	instead of sahf only for 64bit targets.

2010-05-22  Richard Guenther  <rguenther@suse.de>

	* BASE-VER: Set to 4.3.6.
	* DEV-PHASE: Set to prerelease.

2010-05-22  Release Manager

	* GCC 4.3.5 released.

2010-05-20  Hans-Peter Nilsson  <hp@axis.com>

	PR target/44202
	* config/cris/cris.md ("*addsi3_v32"): Correct "cc"
	settings for 16-bit-constant "addo" alternative.

2010-05-14  Richard Guenther  <rguenther@suse.de>

	PR bootstrap/38591
	* Makefile.in (graph.o): Add missing $(CONFIG_H) dependency.
	(sparseset.o): Likewise.

2010-04-30  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-loop-ivopts.c (may_be_unaligned_p): Check the alignment of
	the variable part of the offset as well.

2010-04-27  Richard Guenther  <rguenther@suse.de>

	PR c++/40561
	Backport from mainline
	2008-12-29  Richard Guenther  <rguenther@suse.de>

	PR middle-end/38564
	* fold-const.c (fold_comparison): Use the correct result type.

2010-04-27  Richard Guenther  <rguenther@suse.de>

 	Backport from mainline:
 	2010-03-19  Michael Matz  <matz@suse.de>
 
	PR c++/43116