@@ -76,14 +76,15 @@
    (UNSPEC_TLSDESC		23)
 
    ; Other random patterns
+   (UNSPEC_EH_RETURN		29)
    (UNSPEC_SCAS			30)
    (UNSPEC_FNSTSW		31)
    (UNSPEC_SAHF			32)
-   (UNSPEC_FSTCW		33)
-   (UNSPEC_ADD_CARRY		34)
-   (UNSPEC_FLDCW		35)
-   (UNSPEC_REP			36)
-   (UNSPEC_EH_RETURN		37)
+   (UNSPEC_PARITY		33)
+   (UNSPEC_FSTCW		34)
+   (UNSPEC_ADD_CARRY		35)
+   (UNSPEC_FLDCW		36)
+   (UNSPEC_REP			37)
    (UNSPEC_LD_MPIC		38)	; load_macho_picbase
    (UNSPEC_TRUNC_NOOP		39)
 
@@ -15474,7 +15475,8 @@
 
 (define_insn_and_split "paritydi2_cmp"
   [(set (reg:CC FLAGS_REG)
-	(parity:CC (match_operand:DI 3 "register_operand" "0")))
+	(unspec:CC [(match_operand:DI 3 "register_operand" "0")]
+		   UNSPEC_PARITY))
    (clobber (match_scratch:DI 0 "=r"))
    (clobber (match_scratch:SI 1 "=&r"))
    (clobber (match_scratch:HI 2 "=Q"))]
@@ -15487,7 +15489,7 @@
       (clobber (reg:CC FLAGS_REG))])
    (parallel
      [(set (reg:CC FLAGS_REG)
-	   (parity:CC (match_dup 1)))
+	   (unspec:CC [(match_dup 1)] UNSPEC_PARITY))
       (clobber (match_dup 1))
       (clobber (match_dup 2))])]
 {
@@ -15523,7 +15525,8 @@
 
 (define_insn_and_split "paritysi2_cmp"
   [(set (reg:CC FLAGS_REG)
-	(parity:CC (match_operand:SI 2 "register_operand" "0")))
+	(unspec:CC [(match_operand:SI 2 "register_operand" "0")]
+		   UNSPEC_PARITY))
    (clobber (match_scratch:SI 0 "=r"))
    (clobber (match_scratch:HI 1 "=&Q"))]
   "! TARGET_POPCNT"
@@ -15535,7 +15538,7 @@
       (clobber (reg:CC FLAGS_REG))])
    (parallel
      [(set (reg:CC FLAGS_REG)
-	   (parity:CC (match_dup 1)))
+	   (unspec:CC [(match_dup 1)] UNSPEC_PARITY))
       (clobber (match_dup 1))])]
 {
   operands[3] = gen_lowpart (HImode, operands[2]);
@@ -15546,20 +15549,13 @@
 
 (define_insn "*parityhi2_cmp"
   [(set (reg:CC FLAGS_REG)
-	(parity:CC (match_operand:HI 1 "register_operand" "0")))
+	(unspec:CC [(match_operand:HI 1 "register_operand" "0")]
+		   UNSPEC_PARITY))
    (clobber (match_scratch:HI 0 "=Q"))]
   "! TARGET_POPCNT"
   "xor{b}\t{%h0, %b0|%b0, %h0}"
   [(set_attr "length" "2")
    (set_attr "mode" "HI")])
-
-(define_insn "*parityqi2_cmp"
-  [(set (reg:CC FLAGS_REG)
-	(parity:CC (match_operand:QI 0 "register_operand" "q")))]
-  "! TARGET_POPCNT"
-  "test{b}\t%0, %0"
-  [(set_attr "length" "2")
-   (set_attr "mode" "QI")])
 
 ;; Thread-local storage patterns for ELF.
 ;;
