@@ -1,3 +1,8 @@
+2010-06-13  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/44481
+	* gcc.target/i386/pr44481.c: New test.
+
 2010-05-27  Jason Merrill  <jason@redhat.com>
 
 	PR c++/43555
